<resources>
    <string name="app_name">MeetingCar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Not valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello Blank</string>
    <string name="action_register">Register</string>
    <string name="prompt_required">Required</string>
    <string name="prompt_retype_password">Retype Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_birthday">Birthday</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="prompt_address">Address</string>
    <string name="cancel">Cancel</string>
    <string name="wrong_email_password">Wrong email or password</string>
    <string name="please_enter_email_password">Please enter an email and a password</string>
    <string name="error_empty">Empty</string>
    <string name="password_no_match">Passwords does not match</string>
    <string name="email_already_use">Email already use</string>
    <string name="disconnect">Disconnect</string>
    <string name="desc_img">Image</string>
    <string name="description">Description</string>
    <string name="contact_seller">Contact seller</string>
    <string name="follow">Follow</string>
    <string name="guest">Guest</string>
    <string name="desc_header">Navigation header</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="tracked_announces">Tracked announces</string>
    <string name="my_announces">My announces</string>
    <string name="purchase_history">Purchase history</string>
    <string name="settings">Settings</string>
    <string name="pro">Professional</string>
    <string name="pub_announces">Published announces</string>
    <string name="profile_picture">Profile picture</string>
    <string name="create_announce">Create announce</string>
    <string name="create">Create</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="rent">Rent</string>
    <string name="announce">Annouce</string>
    <string name="message">Message</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="unfollow">UnFollow</string>
    <string name="areyousure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send">Send</string>
    <string name="message_sent">Message sent</string>
    <string name="statistics">Statistics</string>
    <string name="max">Maximum</string>
    <string name="subscribe">Subscribe to Pro+ now !</string>
    <string name="unsubscribe">Unsubscribe from Pro+</string>
</resources>