<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="fr.flareden.meetingcar.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="fr.flareden.meetingcar.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_mail"
        android:name="fr.flareden.meetingcar.ui.mail.MailFragment"
        android:label="@string/prompt_email"
        tools:layout="@layout/fragment_mail" />

    <fragment
        android:id="@+id/nav_follow"
        android:name="fr.flareden.meetingcar.ui.follow.FollowFragment"
        android:label="@string/tracked_announces"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_announces"
        android:name="fr.flareden.meetingcar.ui.myannounces.AnnouncesFragment"
        android:label="@string/my_announces"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_history"
        android:name="fr.flareden.meetingcar.ui.history.HistoryFragment"
        android:label="@string/purchase_history"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_login"
        android:name="fr.flareden.meetingcar.ui.login.LoginFragment"
        android:label="@string/title_activity_login"
        tools:layout="@layout/fragment_login" />

</navigation>