<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile"
            android:visible="false" />
        <item
            android:id="@+id/nav_mail"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="@string/prompt_email"
            android:visible="false" />
        <item
            android:id="@+id/nav_follow"
            android:icon="@drawable/ic_baseline_push_pin_24"
            android:title="@string/tracked_announces"
            android:visible="false" />
        <item
            android:id="@+id/nav_announces"
            android:icon="@drawable/ic_baseline_announcement_24"
            android:title="@string/my_announces"
            android:visible="false" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/purchase_history"
            android:visible="false" />
    </group>

</menu>