<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_annonce_titre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_annonce_images"
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:layout_marginBottom="10dp">

            </androidx.viewpager2.widget.ViewPager2>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="25dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:contentDescription="@string/desc_img"
                    app:srcCompat="@drawable/ic_baseline_location_on_24" />

                <TextView
                    android:id="@+id/tv_annonce_loc"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="25dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:contentDescription="@string/desc_img"
                    app:srcCompat="@drawable/ic_baseline_attach_money_24" />

                <TextView
                    android:id="@+id/tv_annonce_price"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:contentDescription="@string/desc_img"
                    app:srcCompat="@drawable/ic_baseline_directions_car_24" />

                <TextView
                    android:id="@+id/tv_annonce_type"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""
                    android:textAlignment="center" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tv_annonce_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/but_annonce_follow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/follow" />

            <Button
                android:id="@+id/but_annonce_follow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_seller" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>